syntax = "proto2";

option java_package = "com.github.wkicior.gymhunter.infrastructure.persistence";
option optimize_for = SPEED;

message TrainingHuntingSubscriptionDeleted {
    required string id  = 1;
    required string createdDateTime = 2;
    required string trainingHuntingSubscriptionId = 3;
}